--- a/package.json
+++ b/package.json
@@ -62,6 +62,10 @@
     "typescript-eslint": "^8.32.1",
     "vite": "^6.3.5"
   },
+  "dependencies": {
+    "react": "^19.1.0",
+    "react-dom": "^19.1.0"
+  },
   "peerDependencies": {
     "react": "^19.1.0",
     "react-dom": "^19.1.0"
