--- a/tsconfig.json
+++ b/tsconfig.json
@@ -18,6 +18,7 @@
     "skipLibCheck": true,
     "sourceMap": true,
     "strict": true,
+    "verbatimModuleSyntax": true,
     "useDefineForClassFields": true,
     "outDir": "dist",
     "jsx": "react-jsx",
