--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "@types/node": "^22.15.18",
     "@types/react": "^19.1.4",
     "@types/react-dom": "^19.1.5",
+    "@vanilla-extract/vite-plugin": "^5.0.2",
     "@vitejs/plugin-react": "^4.4.1",
     "eslint": "^9.27.0",
     "eslint-config-prettier": "^10.1.5",
@@ -63,11 +64,13 @@
     "vite": "^6.3.5"
   },
   "dependencies": {
+    "@vanilla-extract/css": "^1.17.2",
+    "@vanilla-extract/recipes": "^0.5.5",
     "react": "^19.1.0",
     "react-dom": "^19.1.0"
   },
   "peerDependencies": {
-    "react": "^19.1.0",
-    "react-dom": "^19.1.0"
+    "react": "^19",
+    "react-dom": "^19"
   }
 }
